# sofias

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  WORKFLOWS.md  conftest.py  database.md  keep_in_mind.md  package-lock.json  package.json  pyproject.toml  tsconfig.browser.json
apps/accounts/: admin.py  backends.py  emails.py  forms.py  importers.py  middleware.py  models.py  urls.py  utils.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_role_options.py  0002_role.py  0003_alter_role_options.py  0003_emailotp_alter_user_email.py  0004_remove_expected_employee_count_add_is_activated.py  0005_company_address_company_rfc.py  0006_user_must_change_password.py
apps/accounts/tests/: test_forms.py  test_importers.py  test_models.py  (+1 more)
apps/core/: apps.py  urls.py  views.py
apps/responses/: admin.py  apps.py  models.py
apps/surveys/: admin.py  apps.py  models.py  urls.py  views.py
config/: settings.py  urls.py
specs/: csv-user-import.md
static/css/: output.css
static/js/: csv_user_import.js  survey_progress.js
static/ts/: csv_user_import.ts  survey_progress.ts
templates/: _footer.html  base.html  base_app.html  base_centered.html
templates/accounts/: change_password.html  home.html  login_password.html  login_request.html  login_verify.html  profile_setup.html
templates/core/: _answer_row.html  about.html  company_dashboard.html  company_list.html  employee_detail.html  employee_list.html  employee_survey_list.html
templates/surveys/: _instrucciones_modal.html  _progress_saved_modal.html  _question.html  _session_expired_modal.html  survey_detail.html  survey_submitted.html
(+30 files in other folders)
