[tool.poetry]
package-mode = false

[project]
name = "sofia-s"
version = "0.1.0"
description = ""
authors = [
    {name = "mapstermind",email = "gerryanglada@pinit.mx"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "python-dotenv (>=1.1,<2.0.0)",
    "psycopg[binary] (>=3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.9,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)"
]

[tool.ruff]
exclude = ["*/migrations/*", "**/urls.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
fixable = ["I", "F401"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--reuse-db", "-x", "--tb=short"]
